--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,16 @@
   font-size: large;
 }
 
+.main-content {
+  margin-top: 50px;
+}
+
+.list-content {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-around;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
