istanbul installd, cypress installed and one e2e test is written

--- a/src/Components/ListItem/listItem.css
+++ b/src/Components/ListItem/listItem.css
@@ -7,6 +7,17 @@ li {
     display: flex;
 }
 
-.deleteButton {
-    margin-left: 10px;
+button {
+    height: 25px;
+    border: none;
+    margin: 5px;
+}
+
+
+.delete-button {
+    background-color: #991f00;
+}
+
+.complete-button {
+    background-color: #264d00;
 }
