--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,17 +1,7 @@
-.App {
-  text-align: center;
-}
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
 }
 
 .App-title {
@@ -29,7 +19,7 @@
 .list-content {
   margin-top: 50px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 @keyframes App-logo-spin {
