--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Arial Narrow;
+  letter-spacing: 1.2px;
+  text-align: center;
+  background-color: #EADAD9;
+  color: #336B87;
 }
