--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -22,7 +22,8 @@
   justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.input-error-message {
+  text-align: center;
+  color: red;
 }
+
